--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,18 +11,33 @@ h1{
 
 body{
     margin: 0;
+    background-image: url("http://api.thumbr.it/whitenoise-361x370.png?");
 }
 
+p{
+    line-height: 1.5;
+    padding: 10px;
+}
 
-
-
+#line{
+    height: 7px;
+    background-color: lightslategray;
+    width: auto;
+    margin: 30px;
+    border-radius: 30px;
+    opacity: 0.5;
+}
 
 #aboutMe{
-    border: black;
+    border: ghostwhite;
     border-width: 5px;
-    border-style: inset;
-    background-color: aqua;
-    margin: auto;
-    width: 500px;
+    border-style: solid;
+    background-color: whitesmoke;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 800px;
+    text-align: justify;
+    text-indent: 40px;
 }
 
