--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,23 @@
-nav{
-    background-color: slategrey;
+header{
+    background-color: #ffffff;
     margin: 0;
-
+    border-color: #cccccc;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 h1{
     margin-block-start: 0em;
     margin-block-end: 0em;
+    background-color: #4aaaa5;
+    width: fit-content;
+    padding: 5px;
+    margin-left: 120px;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+}
+
+h2{
+    color: #4aaaa5;
+    font-family: 'Georgia', Times, Times New Roman, serif;
 }
 
 body{
@@ -17,6 +28,12 @@ body{
 p{
     line-height: 1.5;
     padding: 10px;
+    color: #777777;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+}
+
+footer{
+    background-color: #666666;
 }
 
 #line{
@@ -29,10 +46,10 @@ p{
 }
 
 #aboutMe{
-    border: ghostwhite;
-    border-width: 5px;
+    border: #dddddd;
+    border-width: 2px;
     border-style: solid;
-    background-color: whitesmoke;
+    background-color: #ffffff;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
