--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 header{
     background-color: #ffffff;
     margin: 0;
-    border-color: #cccccc;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    border-width: 2px;
+    border-bottom: solid;
+    border-bottom-color: #cccccc;
+    font-family: Arial', 'Helvetica Neue', Helvetica, sans-serif; 
 }
 
 h1{
@@ -47,13 +49,13 @@ footer{
 
 #aboutMe{
     border: #dddddd;
-    border-width: 2px;
+    border-width: 1px;
     border-style: solid;
     background-color: #ffffff;
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 800px;
+    max-width: 960px;
     text-align: justify;
     text-indent: 40px;
 }
