--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,11 @@
 header{
+    grid-row: auto;
     background-color: #ffffff;
     margin: 0;
     border-width: 2px;
     border-bottom: solid;
     border-bottom-color: #cccccc;
-    font-family: Arial', 'Helvetica Neue', Helvetica, sans-serif; 
+    font-family: Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
 }
 
 h1{
