--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,30 @@
 header{
-    grid-row: auto;
+    width: 100%;
+    display: inline-block;
     background-color: #ffffff;
     margin: 0;
     border-width: 2px;
     border-bottom: solid;
     border-bottom-color: #cccccc;
     font-family: Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
+    
 }
 
-h1{
+
+
+a.myName{
+    display: inline-block;
     margin-block-start: 0em;
     margin-block-end: 0em;
     background-color: #4aaaa5;
     width: fit-content;
     padding: 5px;
     margin-left: 120px;
+    float: left;
     font-family: 'Georgia', Times, Times New Roman, serif;
 }
+
+
 
 h2{
     color: #4aaaa5;
@@ -34,10 +42,46 @@ p{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+nav{
+    border: solid 2px yellow;
+    height: 50px;
+}
+
+ul{
+    display: inline-block;
+    float: left;
+    /* list-style-type: circle; */
+    margin: 0;
+    padding: 0;
+    border: solid 2px blue;
+    text-align: center;
+}
+
+li {
+    float: left;
+    border: solid 2px red
+
+  }
+  
+  a {
+    display: block;
+    padding: 8px;
+    background-color: #dddddd;
+  }
 
 footer{
     background-color: #666666;
 }
+
+.navlink{
+    float: left;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
 
 #line{
     height: 7px;
@@ -52,6 +96,7 @@ footer{
     border: #dddddd;
     border-width: 1px;
     border-style: solid;
+    border-radius: 15px;
     background-color: #ffffff;
     margin-top: 20px;
     margin-left: auto;
