--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* HEADER */ 
+
 header{
     width: 100%;
     display: inline-block;
@@ -6,25 +8,51 @@ header{
     border-width: 2px;
     border-bottom: solid;
     border-bottom-color: #cccccc;
-    font-family: Arial', 'Helvetica Neue', 'Helvetica', 'sans-serif';
-    
 }
-
-
 
 a.myName{
     display: inline-block;
-    margin-block-start: 0em;
-    margin-block-end: 0em;
     background-color: #4aaaa5;
     width: fit-content;
-    padding: 5px;
     margin-left: 120px;
     float: left;
+    font-size: x-large;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    text-decoration: none;
+    font-weight: 700;
+    vertical-align: center;
+    padding: 15px 5px 15px 5px;
 }
 
+/* NAV & LIST */
 
+nav{
+    border: solid 2px yellow;
+    height: 50px;
+}
+
+ul{
+    border: 2px solid;
+    height: 50px;
+    align-items: right;
+    text-align: right;
+    align-content: left;
+    float: right;
+}
+
+li {
+    display: inline-block;
+    float: left;
+    border: solid 2px red;
+    background-color: lightgray;
+    margin-left: 20px;
+    padding: 15px 5px 15px 5px;
+  }
+
+a{
+    text-decoration: none;
+}
+/* BODY */
 
 h2{
     color: #4aaaa5;
@@ -42,40 +70,11 @@ p{
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
-nav{
-    border: solid 2px yellow;
-    height: 50px;
-}
 
-ul{
-    display: inline-block;
-    float: left;
-    /* list-style-type: circle; */
-    margin: 0;
-    padding: 0;
-    border: solid 2px blue;
-    text-align: center;
-}
 
-li {
-    float: left;
-    border: solid 2px red
 
-  }
-  
-  a {
-    display: block;
-    padding: 8px;
-    background-color: #dddddd;
-  }
 
-footer{
-    background-color: #666666;
-}
 
-.navlink{
-    float: left;
-}
 
 .clearfix::after {
     content: "";
@@ -113,3 +112,10 @@ footer{
     margin-left: 40px;
 }
 
+
+/*FOOTER*/
+
+
+footer{
+    background-color: #666666;
+}
