--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,26 +27,23 @@ a.myName{
 /* NAV & LIST */
 
 nav{
-    border: solid 2px yellow;
     height: 50px;
 }
 
 ul{
-    border: 2px solid;
     height: 50px;
-    align-items: right;
     text-align: right;
-    align-content: left;
     float: right;
+    margin-right: 10px;
 }
 
 li {
     display: inline-block;
     float: left;
-    border: solid 2px red;
     background-color: lightgray;
     margin-left: 20px;
     padding: 15px 5px 15px 5px;
+    height: 23px;
   }
 
 a{
@@ -57,6 +54,11 @@ a{
 h2{
     color: #4aaaa5;
     font-family: 'Georgia', Times, Times New Roman, serif;
+    width: fit-content;
+    font-size: x-large;
+    padding: 10px 0px;
+    font-weight: 500;
+    margin: 15px 20px 10px 10px;
 }
 
 body{
@@ -65,7 +67,7 @@ body{
 }
 
 p{
-    line-height: 1.5;
+    line-height: 1.8;
     padding: 10px;
     color: #777777;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -86,7 +88,7 @@ p{
     height: 7px;
     background-color: lightslategray;
     width: auto;
-    margin: 30px;
+    margin: 0px 10px 15px 10px;
     border-radius: 30px;
     opacity: 0.5;
 }
@@ -118,4 +120,12 @@ p{
 
 footer{
     background-color: #666666;
+}
+
+h1{
+    color: white;
+    height: 50px;
+    margin: 15px;
+    padding: 30px 0px 0px 20px;
+    font-size: larger;
 }
