portfolio page complete

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -6,6 +6,14 @@
     justify-content: space-evenly;
 
   }
+
+.containerimg{
+    position: relative;
+}  
+
+.containerh2{
+    position: absolute;
+}
   
   #aboutMe{
     border: #dddddd;
