portfolio css updated for text grid overlay

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -13,6 +13,10 @@
 
 .containerh2{
     position: absolute;
+    top: 72px;
+    background-color: black;
+    left: 30px;
+    width: 150px;
 }
   
   #aboutMe{
