--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -12,6 +12,7 @@ header{
     border-bottom-color: #cccccc;
 }
 
+
 a.myName{
     display: inline-block;
     background-color: #4aaaa5;
@@ -22,9 +23,15 @@ a.myName{
     font-family: 'Georgia', Times, Times New Roman, serif;
     text-decoration: none;
     font-weight: 700;
-    vertical-align: center;
-    padding: 15px 5px 15px 5px;
+    padding: 30px 5px 15px 5px;
+    height: 52px;
 }
+
+a.myName:hover{
+    background-color: #419995;
+    color: #ffffff;
+}
+
 
 /* NAV & LIST */
 
@@ -37,16 +44,22 @@ ul{
     text-align: right;
     float: right;
     margin-right: 10px;
+    list-style-image: image-set("assets/images/gray_square_-_Google_Search.png");
+    color: #696565;
 }
 
 li {
-    display: inline-block;
     float: left;
     background-color: lightgray;
-    margin-left: 20px;
+    margin-left: 27px;
     padding: 15px 5px 15px 5px;
     height: 23px;
   }
+
+
+li:first-child{
+    list-style: none;
+}  
  
 li:hover{
     background-color: #696565;
@@ -55,6 +68,8 @@ li:hover{
 a{
     text-decoration: none;
 }
+
+
 /* BODY */
 
 h2{
@@ -84,11 +99,6 @@ p{
 
 
 
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
 
 #line{
     height: 7px;
@@ -126,12 +136,18 @@ p{
 
 footer{
     background-color: #666666;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    text-align: center;
 }
 
 h1{
     color: white;
-    height: 50px;
+    height: 10px;
     margin: 15px;
     padding: 30px 0px 0px 20px;
     font-size: larger;
+    bottom: 0;
+    font-size: small;
 }
